--- a/mechanika.ipynb
+++ b/mechanika.ipynb
@@ -9,7 +9,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from math import log, pi"
+    "from math import log, pi\n",
+    "pd.set_option('display.max_rows', None)"
    ]
   },
   {
@@ -301,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +347,7 @@
        "      <td>0.001</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.002</td>\n",
-       "      <td>0.3125</td>\n",
+       "      <td>0.312500</td>\n",
        "      <td>1.963495</td>\n",
        "      <td>0.141012</td>\n",
        "      <td>3.855314</td>\n",
@@ -361,7 +362,7 @@
        "      <td>0.008</td>\n",
        "      <td>0.006</td>\n",
        "      <td>0.010</td>\n",
-       "      <td>0.6250</td>\n",
+       "      <td>0.625000</td>\n",
        "      <td>3.926991</td>\n",
        "      <td>0.282024</td>\n",
        "      <td>15.421257</td>\n",
@@ -376,7 +377,7 @@
        "      <td>0.025</td>\n",
        "      <td>0.010</td>\n",
        "      <td>0.040</td>\n",
-       "      <td>0.9375</td>\n",
+       "      <td>0.937500</td>\n",
        "      <td>5.890486</td>\n",
        "      <td>0.423036</td>\n",
        "      <td>34.697828</td>\n",
@@ -391,7 +392,7 @@
        "      <td>0.801</td>\n",
        "      <td>0.103</td>\n",
        "      <td>1.500</td>\n",
-       "      <td>1.2500</td>\n",
+       "      <td>1.250000</td>\n",
        "      <td>7.853982</td>\n",
        "      <td>0.564049</td>\n",
        "      <td>61.685028</td>\n",
@@ -406,7 +407,7 @@
        "      <td>2.527</td>\n",
        "      <td>1.454</td>\n",
        "      <td>3.600</td>\n",
-       "      <td>1.5625</td>\n",
+       "      <td>1.562500</td>\n",
        "      <td>9.817477</td>\n",
        "      <td>0.705061</td>\n",
        "      <td>96.382855</td>\n",
@@ -415,27 +416,333 @@
        "      <td>3.532361</td>\n",
        "      <td>3.306860</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>6.247</td>\n",
+       "      <td>0.031</td>\n",
+       "      <td>12.463</td>\n",
+       "      <td>1.875000</td>\n",
+       "      <td>11.780972</td>\n",
+       "      <td>0.846073</td>\n",
+       "      <td>138.791312</td>\n",
+       "      <td>3.553058</td>\n",
+       "      <td>0.495960</td>\n",
+       "      <td>9.001941</td>\n",
+       "      <td>7.037777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>11.128</td>\n",
+       "      <td>1.926</td>\n",
+       "      <td>20.331</td>\n",
+       "      <td>2.031250</td>\n",
+       "      <td>12.762720</td>\n",
+       "      <td>0.916579</td>\n",
+       "      <td>162.887026</td>\n",
+       "      <td>4.169908</td>\n",
+       "      <td>0.582064</td>\n",
+       "      <td>18.776827</td>\n",
+       "      <td>10.246587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>13.5</td>\n",
+       "      <td>14.835</td>\n",
+       "      <td>0.249</td>\n",
+       "      <td>29.421</td>\n",
+       "      <td>2.109375</td>\n",
+       "      <td>13.253594</td>\n",
+       "      <td>0.951832</td>\n",
+       "      <td>175.657754</td>\n",
+       "      <td>4.496839</td>\n",
+       "      <td>0.627699</td>\n",
+       "      <td>34.435352</td>\n",
+       "      <td>11.913853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>13.6</td>\n",
+       "      <td>15.563</td>\n",
+       "      <td>1.903</td>\n",
+       "      <td>29.223</td>\n",
+       "      <td>2.125000</td>\n",
+       "      <td>13.351769</td>\n",
+       "      <td>0.958883</td>\n",
+       "      <td>178.269729</td>\n",
+       "      <td>4.563705</td>\n",
+       "      <td>0.637033</td>\n",
+       "      <td>40.792655</td>\n",
+       "      <td>12.206022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>13.7</td>\n",
+       "      <td>16.797</td>\n",
+       "      <td>17.113</td>\n",
+       "      <td>16.481</td>\n",
+       "      <td>2.140625</td>\n",
+       "      <td>13.449944</td>\n",
+       "      <td>0.965933</td>\n",
+       "      <td>180.900981</td>\n",
+       "      <td>4.631065</td>\n",
+       "      <td>0.646436</td>\n",
+       "      <td>49.782819</td>\n",
+       "      <td>12.475016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>13.8</td>\n",
+       "      <td>17.317</td>\n",
+       "      <td>13.459</td>\n",
+       "      <td>21.175</td>\n",
+       "      <td>2.156250</td>\n",
+       "      <td>13.548118</td>\n",
+       "      <td>0.972984</td>\n",
+       "      <td>183.551510</td>\n",
+       "      <td>4.698919</td>\n",
+       "      <td>0.655907</td>\n",
+       "      <td>63.467182</td>\n",
+       "      <td>12.716989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>13.9</td>\n",
+       "      <td>18.043</td>\n",
+       "      <td>5.373</td>\n",
+       "      <td>30.712</td>\n",
+       "      <td>2.171875</td>\n",
+       "      <td>13.646293</td>\n",
+       "      <td>0.980034</td>\n",
+       "      <td>186.221315</td>\n",
+       "      <td>4.767266</td>\n",
+       "      <td>0.665447</td>\n",
+       "      <td>86.818837</td>\n",
+       "      <td>12.928511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>18.241</td>\n",
+       "      <td>25.743</td>\n",
+       "      <td>10.739</td>\n",
+       "      <td>2.187500</td>\n",
+       "      <td>13.744468</td>\n",
+       "      <td>0.987085</td>\n",
+       "      <td>188.910397</td>\n",
+       "      <td>4.836106</td>\n",
+       "      <td>0.675057</td>\n",
+       "      <td>135.670687</td>\n",
+       "      <td>13.106752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14.1</td>\n",
+       "      <td>18.860</td>\n",
+       "      <td>14.325</td>\n",
+       "      <td>23.395</td>\n",
+       "      <td>2.203125</td>\n",
+       "      <td>13.842643</td>\n",
+       "      <td>0.994136</td>\n",
+       "      <td>191.618755</td>\n",
+       "      <td>4.905440</td>\n",
+       "      <td>0.684735</td>\n",
+       "      <td>301.998883</td>\n",
+       "      <td>13.249636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14.2</td>\n",
+       "      <td>18.689</td>\n",
+       "      <td>35.456</td>\n",
+       "      <td>1.922</td>\n",
+       "      <td>2.218750</td>\n",
+       "      <td>13.940817</td>\n",
+       "      <td>1.001186</td>\n",
+       "      <td>194.346390</td>\n",
+       "      <td>4.975268</td>\n",
+       "      <td>0.694482</td>\n",
+       "      <td>1508.783196</td>\n",
+       "      <td>13.355942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>14.3</td>\n",
+       "      <td>18.836</td>\n",
+       "      <td>2.125</td>\n",
+       "      <td>35.547</td>\n",
+       "      <td>2.234375</td>\n",
+       "      <td>14.038992</td>\n",
+       "      <td>1.008237</td>\n",
+       "      <td>197.093301</td>\n",
+       "      <td>5.045589</td>\n",
+       "      <td>0.704298</td>\n",
+       "      <td>219.598649</td>\n",
+       "      <td>13.425365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>14.4</td>\n",
+       "      <td>19.020</td>\n",
+       "      <td>0.947</td>\n",
+       "      <td>37.093</td>\n",
+       "      <td>2.250000</td>\n",
+       "      <td>14.137167</td>\n",
+       "      <td>1.015288</td>\n",
+       "      <td>199.859489</td>\n",
+       "      <td>5.116403</td>\n",
+       "      <td>0.714182</td>\n",
+       "      <td>119.560617</td>\n",
+       "      <td>13.458498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>14.5</td>\n",
+       "      <td>18.673</td>\n",
+       "      <td>0.108</td>\n",
+       "      <td>37.239</td>\n",
+       "      <td>2.265625</td>\n",
+       "      <td>14.235342</td>\n",
+       "      <td>1.022338</td>\n",
+       "      <td>202.644954</td>\n",
+       "      <td>5.187711</td>\n",
+       "      <td>0.724136</td>\n",
+       "      <td>82.674727</td>\n",
+       "      <td>13.456765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>17.190</td>\n",
+       "      <td>0.133</td>\n",
+       "      <td>34.246</td>\n",
+       "      <td>2.343750</td>\n",
+       "      <td>14.726216</td>\n",
+       "      <td>1.057591</td>\n",
+       "      <td>216.861425</td>\n",
+       "      <td>5.551652</td>\n",
+       "      <td>0.774938</td>\n",
+       "      <td>33.729118</td>\n",
+       "      <td>13.016071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>7.249</td>\n",
+       "      <td>0.944</td>\n",
+       "      <td>13.555</td>\n",
+       "      <td>3.125000</td>\n",
+       "      <td>19.634954</td>\n",
+       "      <td>1.410122</td>\n",
+       "      <td>385.531422</td>\n",
+       "      <td>9.869604</td>\n",
+       "      <td>1.377667</td>\n",
+       "      <td>7.188627</td>\n",
+       "      <td>6.715046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>5.454</td>\n",
+       "      <td>4.001</td>\n",
+       "      <td>6.906</td>\n",
+       "      <td>3.906250</td>\n",
+       "      <td>24.543693</td>\n",
+       "      <td>1.762652</td>\n",
+       "      <td>602.392847</td>\n",
+       "      <td>15.421257</td>\n",
+       "      <td>2.152604</td>\n",
+       "      <td>5.269446</td>\n",
+       "      <td>5.141923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>4.793</td>\n",
+       "      <td>0.047</td>\n",
+       "      <td>9.539</td>\n",
+       "      <td>4.687500</td>\n",
+       "      <td>29.452431</td>\n",
+       "      <td>2.115182</td>\n",
+       "      <td>867.445699</td>\n",
+       "      <td>22.206610</td>\n",
+       "      <td>3.099750</td>\n",
+       "      <td>4.602043</td>\n",
+       "      <td>4.542034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>4.461</td>\n",
+       "      <td>6.028</td>\n",
+       "      <td>2.894</td>\n",
+       "      <td>5.468750</td>\n",
+       "      <td>34.361170</td>\n",
+       "      <td>2.467713</td>\n",
+       "      <td>1180.689980</td>\n",
+       "      <td>30.225663</td>\n",
+       "      <td>4.219104</td>\n",
+       "      <td>4.275525</td>\n",
+       "      <td>4.239917</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Czestotliwosc  Amplituda  First  Second       n         W       W/a  \\\n",
-       "0            2.0      0.001  0.000   0.002  0.3125  1.963495  0.141012   \n",
-       "1            4.0      0.008  0.006   0.010  0.6250  3.926991  0.282024   \n",
-       "2            6.0      0.025  0.010   0.040  0.9375  5.890486  0.423036   \n",
-       "3            8.0      0.801  0.103   1.500  1.2500  7.853982  0.564049   \n",
-       "4           10.0      2.527  1.454   3.600  1.5625  9.817477  0.705061   \n",
+       "    Czestotliwosc  Amplituda   First  Second         n          W       W/a  \\\n",
+       "0             2.0      0.001   0.000   0.002  0.312500   1.963495  0.141012   \n",
+       "1             4.0      0.008   0.006   0.010  0.625000   3.926991  0.282024   \n",
+       "2             6.0      0.025   0.010   0.040  0.937500   5.890486  0.423036   \n",
+       "3             8.0      0.801   0.103   1.500  1.250000   7.853982  0.564049   \n",
+       "4            10.0      2.527   1.454   3.600  1.562500   9.817477  0.705061   \n",
+       "5            12.0      6.247   0.031  12.463  1.875000  11.780972  0.846073   \n",
+       "6            13.0     11.128   1.926  20.331  2.031250  12.762720  0.916579   \n",
+       "7            13.5     14.835   0.249  29.421  2.109375  13.253594  0.951832   \n",
+       "8            13.6     15.563   1.903  29.223  2.125000  13.351769  0.958883   \n",
+       "9            13.7     16.797  17.113  16.481  2.140625  13.449944  0.965933   \n",
+       "10           13.8     17.317  13.459  21.175  2.156250  13.548118  0.972984   \n",
+       "11           13.9     18.043   5.373  30.712  2.171875  13.646293  0.980034   \n",
+       "12           14.0     18.241  25.743  10.739  2.187500  13.744468  0.987085   \n",
+       "13           14.1     18.860  14.325  23.395  2.203125  13.842643  0.994136   \n",
+       "14           14.2     18.689  35.456   1.922  2.218750  13.940817  1.001186   \n",
+       "15           14.3     18.836   2.125  35.547  2.234375  14.038992  1.008237   \n",
+       "16           14.4     19.020   0.947  37.093  2.250000  14.137167  1.015288   \n",
+       "17           14.5     18.673   0.108  37.239  2.265625  14.235342  1.022338   \n",
+       "18           15.0     17.190   0.133  34.246  2.343750  14.726216  1.057591   \n",
+       "19           20.0      7.249   0.944  13.555  3.125000  19.634954  1.410122   \n",
+       "20           25.0      5.454   4.001   6.906  3.906250  24.543693  1.762652   \n",
+       "21           30.0      4.793   0.047   9.539  4.687500  29.452431  2.115182   \n",
+       "22           35.0      4.461   6.028   2.894  5.468750  34.361170  2.467713   \n",
        "\n",
-       "         W^2        P0         q         A        Ad  \n",
-       "0   3.855314  0.098696  0.013777  0.072497  0.072443  \n",
-       "1  15.421257  0.394784  0.055107  0.308782  0.307747  \n",
-       "2  34.697828  0.888264  0.123990  0.778889  0.771575  \n",
-       "3  61.685028  1.579137  0.220427  1.667359  1.627875  \n",
-       "4  96.382855  2.467401  0.344417  3.532361  3.306860  "
+       "            W^2         P0         q            A         Ad  \n",
+       "0      3.855314   0.098696  0.013777     0.072497   0.072443  \n",
+       "1     15.421257   0.394784  0.055107     0.308782   0.307747  \n",
+       "2     34.697828   0.888264  0.123990     0.778889   0.771575  \n",
+       "3     61.685028   1.579137  0.220427     1.667359   1.627875  \n",
+       "4     96.382855   2.467401  0.344417     3.532361   3.306860  \n",
+       "5    138.791312   3.553058  0.495960     9.001941   7.037777  \n",
+       "6    162.887026   4.169908  0.582064    18.776827  10.246587  \n",
+       "7    175.657754   4.496839  0.627699    34.435352  11.913853  \n",
+       "8    178.269729   4.563705  0.637033    40.792655  12.206022  \n",
+       "9    180.900981   4.631065  0.646436    49.782819  12.475016  \n",
+       "10   183.551510   4.698919  0.655907    63.467182  12.716989  \n",
+       "11   186.221315   4.767266  0.665447    86.818837  12.928511  \n",
+       "12   188.910397   4.836106  0.675057   135.670687  13.106752  \n",
+       "13   191.618755   4.905440  0.684735   301.998883  13.249636  \n",
+       "14   194.346390   4.975268  0.694482  1508.783196  13.355942  \n",
+       "15   197.093301   5.045589  0.704298   219.598649  13.425365  \n",
+       "16   199.859489   5.116403  0.714182   119.560617  13.458498  \n",
+       "17   202.644954   5.187711  0.724136    82.674727  13.456765  \n",
+       "18   216.861425   5.551652  0.774938    33.729118  13.016071  \n",
+       "19   385.531422   9.869604  1.377667     7.188627   6.715046  \n",
+       "20   602.392847  15.421257  2.152604     5.269446   5.141923  \n",
+       "21   867.445699  22.206610  3.099750     4.602043   4.542034  \n",
+       "22  1180.689980  30.225663  4.219104     4.275525   4.239917  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
