--- a/bezwladnosc_zastepcza/obliczenia.ipynb
+++ b/bezwladnosc_zastepcza/obliczenia.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +102,8 @@
        "      <th>t1</th>\n",
        "      <th>t2</th>\n",
        "      <th>M</th>\n",
+       "      <th>Tsr</th>\n",
+       "      <th>Ired</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -111,6 +113,8 @@
        "      <td>3.12</td>\n",
        "      <td>3.09</td>\n",
        "      <td>1.45</td>\n",
+       "      <td>3.105</td>\n",
+       "      <td>0.008310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -118,6 +122,8 @@
        "      <td>1.55</td>\n",
        "      <td>1.55</td>\n",
        "      <td>2.18</td>\n",
+       "      <td>1.550</td>\n",
+       "      <td>0.005671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -125,6 +131,8 @@
        "      <td>4.31</td>\n",
        "      <td>4.35</td>\n",
        "      <td>1.45</td>\n",
+       "      <td>4.330</td>\n",
+       "      <td>0.016161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -132,28 +140,40 @@
        "      <td>2.05</td>\n",
        "      <td>2.03</td>\n",
        "      <td>2.18</td>\n",
+       "      <td>2.040</td>\n",
+       "      <td>0.009824</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Eksperyment    t1    t2     M\n",
-       "0  Bez Tarczy m1  3.12  3.09  1.45\n",
-       "1  Bez Tarczy m2  1.55  1.55  2.18\n",
-       "2    Tarcza A m1  4.31  4.35  1.45\n",
-       "3    Tarcza A m2  2.05  2.03  2.18"
+       "     Eksperyment    t1    t2     M    Tsr      Ired\n",
+       "0  Bez Tarczy m1  3.12  3.09  1.45  3.105  0.008310\n",
+       "1  Bez Tarczy m2  1.55  1.55  2.18  1.550  0.005671\n",
+       "2    Tarcza A m1  4.31  4.35  1.45  4.330  0.016161\n",
+       "3    Tarcza A m2  2.05  2.03  2.18  2.040  0.009824"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pandas.read_csv(\"red_pomiary.csv\")\n",
+    "df[\"Tsr\"] = [(t1+t2)/2 for t1, t2 in zip(df[\"t1\"], df[\"t2\"])]\n",
+    "\n",
+    "df[\"Ired\"] = [(0.002053*M-0.0017042-0.013954*Mt)*t**2 for t,M in zip(df[\"Tsr\"], df[\"M\"])]\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
