--- a/bezwladnosc_zastepcza/obliczenia.ipynb
+++ b/bezwladnosc_zastepcza/obliczenia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.029432 Nm'"
+       "'Mt = 0.029432 Nm'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
     "Mmax = 1.2 #[kg]\n",
     "Mmin = 0.8 #[kg]\n",
     "Mt = 0.07358*(Mmax-Mmin)\n",
-    "f\"{round(Mt, 7)} Nm\""
+    "f\"Mt = {round(Mt, 7)} Nm\""
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "3    Tarcza A m2  2.05  2.03  2.18  2.040"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.0083101 kg*m^2'"
+       "'Mt = 0.0083101 kg*m^2'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
     "m1 = 1.45 #[kg]\n",
     "\n",
     "I = (0.002053*m1-0.0017042-0.013954*Mt)*t**2\n",
-    "f\"{round(I, 7)} kg*m^2\""
+    "f\"Mt = {round(I, 6)} kg*m^2\""
    ]
   },
   {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "3    Tarcza A m2  2.05  2.03  2.18  2.040  0.009824"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0078506 kg*m^2\n",
-      "0.0041526 kg*m^2\n"
+      "Ia1 = 0.0078506 kg*m^2\n",
+      "Ia2 = 0.0041526 kg*m^2\n"
      ]
     }
    ],
@@ -300,8 +300,8 @@
     "Ia1 = float(df.query(\"Eksperyment == 'Tarcza A m1'\")[\"Ired\"]) - float(df.query(\"Eksperyment == 'Bez Tarczy m1'\")[\"Ired\"])\n",
     "Ia2 = float(df.query(\"Eksperyment == 'Tarcza A m2'\")[\"Ired\"]) - float(df.query(\"Eksperyment == 'Bez Tarczy m2'\")[\"Ired\"])\n",
     "\n",
-    "print(f\"{round(Ia1, 7)} kg*m^2\")\n",
-    "print(f\"{round(Ia2, 7)} kg*m^2\")"
+    "print(f\"Ia1 = {round(Ia1, 6)} kg*m^2\")\n",
+    "print(f\"Ia2 = {round(Ia2, 6)} kg*m^2\")"
    ]
   },
   {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
     "# Ten krazek ma w sobie dziury wiec tez trzeba by wziac to pod uwage\n",
     "from math import pi\n",
     "I = 0.5*pi*7028*(0.15**4-0.031**4)*0.0095\n",
-    "print(f\"{round(I, 7)} kg*m^2\")"
+    "print(f\"{round(I, 6)} kg*m^2\")"
    ]
   },
   {
