--- a/bezwladnosc_zastepcza/obliczenia.ipynb
+++ b/bezwladnosc_zastepcza/obliczenia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,25 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Mt = 0.029432 Nm'"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mt = 0.0228098 Nm\n"
+     ]
     }
    ],
    "source": [
-    "Mmax = 1.2 #[kg]\n",
-    "Mmin = 0.8 #[kg]\n",
+    "Mmax = 1.24 #[kg]\n",
+    "Mmin = 0.93 #[kg]\n",
     "Mt = 0.07358*(Mmax-Mmin)\n",
-    "f\"Mt = {round(Mt, 7)} Nm\""
+    "print(f\"Mt = {round(Mt, 7)} Nm\")"
    ]
   },
   {
@@ -49,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +122,7 @@
        "3    Tarcza A m2  2.05  2.03  2.18  2.040"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Mt = 0.0083101 kg*m^2'"
+       "'Mt = 0.009201 kg*m^2'"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +169,7 @@
     "m1 = 1.45 #[kg]\n",
     "\n",
     "I = (0.002053*m1-0.0017042-0.013954*Mt)*t**2\n",
-    "f\"Mt = {round(I, 6)} kg*m^2\""
+    "print(f\"Mt = {round(I, 6)} kg*m^2\")"
    ]
   },
   {
@@ -184,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +221,7 @@
        "      <td>3.09</td>\n",
        "      <td>1.45</td>\n",
        "      <td>3.105</td>\n",
-       "      <td>0.008310</td>\n",
+       "      <td>0.009201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -233,7 +230,7 @@
        "      <td>1.55</td>\n",
        "      <td>2.18</td>\n",
        "      <td>1.550</td>\n",
-       "      <td>0.005671</td>\n",
+       "      <td>0.005893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -242,7 +239,7 @@
        "      <td>4.35</td>\n",
        "      <td>1.45</td>\n",
        "      <td>4.330</td>\n",
-       "      <td>0.016161</td>\n",
+       "      <td>0.017893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -251,7 +248,7 @@
        "      <td>2.03</td>\n",
        "      <td>2.18</td>\n",
        "      <td>2.040</td>\n",
-       "      <td>0.009824</td>\n",
+       "      <td>0.010209</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -259,13 +256,13 @@
       ],
       "text/plain": [
        "     Eksperyment    t1    t2     M    Tsr      Ired\n",
-       "0  Bez Tarczy m1  3.12  3.09  1.45  3.105  0.008310\n",
-       "1  Bez Tarczy m2  1.55  1.55  2.18  1.550  0.005671\n",
-       "2    Tarcza A m1  4.31  4.35  1.45  4.330  0.016161\n",
-       "3    Tarcza A m2  2.05  2.03  2.18  2.040  0.009824"
+       "0  Bez Tarczy m1  3.12  3.09  1.45  3.105  0.009201\n",
+       "1  Bez Tarczy m2  1.55  1.55  2.18  1.550  0.005893\n",
+       "2    Tarcza A m1  4.31  4.35  1.45  4.330  0.017893\n",
+       "3    Tarcza A m2  2.05  2.03  2.18  2.040  0.010209"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,15 +281,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ia1 = 0.0078506 kg*m^2\n",
-      "Ia2 = 0.0041526 kg*m^2\n"
+      "Ia1 = 0.008692 kg*m^2\n",
+      "Ia2 = 0.004315 kg*m^2\n"
      ]
     }
    ],
@@ -313,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0529965 kg*m^2\n"
+      "I = 0.052997 kg*m^2\n"
      ]
     }
    ],
@@ -330,15 +327,8 @@
     "# Ten krazek ma w sobie dziury wiec tez trzeba by wziac to pod uwage\n",
     "from math import pi\n",
     "I = 0.5*pi*7028*(0.15**4-0.031**4)*0.0095\n",
-    "print(f\"{round(I, 6)} kg*m^2\")"
+    "print(f\"I = {round(I, 6)} kg*m^2\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
