--- a/bezwladnosc_zastepcza/obliczenia.ipynb
+++ b/bezwladnosc_zastepcza/obliczenia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -80,34 +80,34 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Bez Tarczy m1</td>\n",
+       "      <td>Bez Tarczy m1 1</td>\n",
        "      <td>3.12</td>\n",
        "      <td>3.09</td>\n",
-       "      <td>1.45</td>\n",
+       "      <td>1.11</td>\n",
        "      <td>3.105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Bez Tarczy m2</td>\n",
+       "      <td>Bez Tarczy m1 2</td>\n",
        "      <td>1.55</td>\n",
        "      <td>1.55</td>\n",
-       "      <td>2.18</td>\n",
+       "      <td>1.84</td>\n",
        "      <td>1.550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Tarcza A m1</td>\n",
+       "      <td>Tarcza A m1 1</td>\n",
        "      <td>4.31</td>\n",
        "      <td>4.35</td>\n",
-       "      <td>1.45</td>\n",
+       "      <td>1.11</td>\n",
        "      <td>4.330</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Tarcza A m2</td>\n",
+       "      <td>Tarcza A m1 2</td>\n",
        "      <td>2.05</td>\n",
        "      <td>2.03</td>\n",
-       "      <td>2.18</td>\n",
+       "      <td>1.84</td>\n",
        "      <td>2.040</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -115,14 +115,14 @@
        "</div>"
       ],
       "text/plain": [
-       "     Eksperyment    t1    t2     M    Tsr\n",
-       "0  Bez Tarczy m1  3.12  3.09  1.45  3.105\n",
-       "1  Bez Tarczy m2  1.55  1.55  2.18  1.550\n",
-       "2    Tarcza A m1  4.31  4.35  1.45  4.330\n",
-       "3    Tarcza A m2  2.05  2.03  2.18  2.040"
+       "       Eksperyment    t1    t2     M    Tsr\n",
+       "0  Bez Tarczy m1 1  3.12  3.09  1.11  3.105\n",
+       "1  Bez Tarczy m1 2  1.55  1.55  1.84  1.550\n",
+       "2    Tarcza A m1 1  4.31  4.35  1.11  4.330\n",
+       "3    Tarcza A m1 2  2.05  2.03  1.84  2.040"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,6 +130,7 @@
    "source": [
     "df = pandas.read_csv(\"red_pomiary.csv\")\n",
     "df[\"Tsr\"] = [(t1+t2)/2 for t1, t2 in zip(df[\"t1\"], df[\"t2\"])]\n",
+    "df[\"M\"] = [M-0.34 for M in df[\"M\"]]\n",
     "df.head(10)"
    ]
   },
@@ -149,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mt = 0.009201 kg*m^2\n"
+      "I = 0.009201 kg*m^2\n"
      ]
     }
    ],
@@ -166,7 +167,7 @@
     "m1 = 1.45 #[kg]\n",
     "\n",
     "I = (0.002053*m1-0.0017042-0.013954*Mt)*t**2\n",
-    "print(f\"Mt = {round(I, 6)} kg*m^2\")"
+    "print(f\"I = {round(I, 6)} kg*m^2\")"
    ]
   },
   {
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -213,59 +214,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Bez Tarczy m1</td>\n",
+       "      <td>Bez Tarczy m1 1</td>\n",
        "      <td>3.12</td>\n",
        "      <td>3.09</td>\n",
-       "      <td>1.45</td>\n",
+       "      <td>1.11</td>\n",
        "      <td>3.105</td>\n",
-       "      <td>0.009201</td>\n",
+       "      <td>0.002471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Bez Tarczy m2</td>\n",
+       "      <td>Bez Tarczy m1 2</td>\n",
        "      <td>1.55</td>\n",
        "      <td>1.55</td>\n",
-       "      <td>2.18</td>\n",
+       "      <td>1.84</td>\n",
        "      <td>1.550</td>\n",
-       "      <td>0.005893</td>\n",
+       "      <td>0.004216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Tarcza A m1</td>\n",
+       "      <td>Tarcza A m1 1</td>\n",
        "      <td>4.31</td>\n",
        "      <td>4.35</td>\n",
-       "      <td>1.45</td>\n",
+       "      <td>1.11</td>\n",
        "      <td>4.330</td>\n",
-       "      <td>0.017893</td>\n",
+       "      <td>0.004806</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Tarcza A m2</td>\n",
+       "      <td>Tarcza A m1 2</td>\n",
        "      <td>2.05</td>\n",
        "      <td>2.03</td>\n",
-       "      <td>2.18</td>\n",
+       "      <td>1.84</td>\n",
        "      <td>2.040</td>\n",
-       "      <td>0.010209</td>\n",
+       "      <td>0.007304</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Eksperyment    t1    t2     M    Tsr      Ired\n",
-       "0  Bez Tarczy m1  3.12  3.09  1.45  3.105  0.009201\n",
-       "1  Bez Tarczy m2  1.55  1.55  2.18  1.550  0.005893\n",
-       "2    Tarcza A m1  4.31  4.35  1.45  4.330  0.017893\n",
-       "3    Tarcza A m2  2.05  2.03  2.18  2.040  0.010209"
+       "       Eksperyment    t1    t2     M    Tsr      Ired\n",
+       "0  Bez Tarczy m1 1  3.12  3.09  1.11  3.105  0.002471\n",
+       "1  Bez Tarczy m1 2  1.55  1.55  1.84  1.550  0.004216\n",
+       "2    Tarcza A m1 1  4.31  4.35  1.11  4.330  0.004806\n",
+       "3    Tarcza A m1 2  2.05  2.03  1.84  2.040  0.007304"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Ired\"] = [(0.002053*M-0.0017042-0.013954*Mt)*t**2 for t,M in zip(df[\"Tsr\"], df[\"M\"])]\n",
+    "df[\"Ired\"] = [((0.002053*M)-0.0017042-(0.013954*Mt))*(t**2) for t,M in zip(df[\"Tsr\"], df[\"M\"])]\n",
     "df.head(10)"
    ]
   },
@@ -278,21 +279,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ia1 = 0.008692 kg*m^2\n",
-      "Ia2 = 0.004315 kg*m^2\n"
+      "Ia1 = 0.002335 kg*m^2\n",
+      "Ia2 = 0.003087 kg*m^2\n"
      ]
     }
    ],
    "source": [
-    "Ia1 = float(df.query(\"Eksperyment == 'Tarcza A m1'\")[\"Ired\"]) - float(df.query(\"Eksperyment == 'Bez Tarczy m1'\")[\"Ired\"])\n",
-    "Ia2 = float(df.query(\"Eksperyment == 'Tarcza A m2'\")[\"Ired\"]) - float(df.query(\"Eksperyment == 'Bez Tarczy m2'\")[\"Ired\"])\n",
+    "Ia1 = float(df.query(\"Eksperyment == 'Tarcza A m1 1'\")[\"Ired\"]) - float(df.query(\"Eksperyment == 'Bez Tarczy m1 1'\")[\"Ired\"])\n",
+    "Ia2 = float(df.query(\"Eksperyment == 'Tarcza A m1 2'\")[\"Ired\"]) - float(df.query(\"Eksperyment == 'Bez Tarczy m1 2'\")[\"Ired\"])\n",
     "\n",
     "print(f\"Ia1 = {round(Ia1, 6)} kg*m^2\")\n",
     "print(f\"Ia2 = {round(Ia2, 6)} kg*m^2\")"
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -336,12 +337,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"wyniki.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Moment zastepczy z innego wzoru (3.11) ??? chyba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004555495559762034"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "I1 = 0.613e-4\n",
+    "I2 = 1.661e-3\n",
+    "I3 = 1.378e-3\n",
+    "I4 = 0.317e-4\n",
+    "I5 = 2.988e-3\n",
+    "I6 = 2.268e-3\n",
+    "I7 = 0.293e-4\n",
+    "I8 = 4.019e-4\n",
+    "rb = 36e-3\n",
+    "r3 = 30e-3\n",
+    "z1 = 28\n",
+    "z2 = 86\n",
+    "mt2 = 0.54\n",
+    "m2 = 1.45\n",
+    "mkr = 0.385\n",
+    "rkr = 30e-3\n",
+    "m1 = 1.45\n",
+    "mt1 = 0.34\n",
+    "\n",
+    "I = I1+I2+I3+I4+((z1/z2)**2)*(I5+I6+I7)+(rb**2)*((z1/z2)**2)*(mt2+m2)+0.25*(r3**2)*(mkr+(I8/(rkr**2))+m1+mt1)\n",
+    "I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
