--- a/bezwladnosc_zastepcza/obliczenia.ipynb
+++ b/bezwladnosc_zastepcza/obliczenia.ipynb
@@ -348,7 +348,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Moment zastepczy z innego wzoru (3.11) ??? chyba"
+    "### Moment zastepczy z innego wzoru (3.11) \n",
+    "### TEST - ZIGNOROWAC"
    ]
   },
   {
