--- a/bezwladnosc_zastepcza/obliczenia.ipynb
+++ b/bezwladnosc_zastepcza/obliczenia.ipynb
@@ -14,6 +14,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Okazalo sie z *chyba* pomiary mas byly zle - tzn w tych wzorach potrzebna jest masa samych odwaznikow a nie calego ciala, masa bazowego talerzyka jest juz uwzgledniona we wzorze"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Tarcie"
    ]
   },
