--- a/bezwladnosc_zastepcza/obliczenia.ipynb
+++ b/bezwladnosc_zastepcza/obliczenia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mt = 0.02281 Nm\n"
+      "Mt = 0.022074 Nm\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "3    Tarcza A m1 2  2.05  2.03  1.84  2.040"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I = 0.009201 kg*m^2\n"
+      "I = 0.0093 kg*m^2\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "      <td>3.09</td>\n",
        "      <td>1.11</td>\n",
        "      <td>3.105</td>\n",
-       "      <td>0.002471</td>\n",
+       "      <td>0.002570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -235,7 +235,7 @@
        "      <td>1.55</td>\n",
        "      <td>1.84</td>\n",
        "      <td>1.550</td>\n",
-       "      <td>0.004216</td>\n",
+       "      <td>0.004241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -244,7 +244,7 @@
        "      <td>4.35</td>\n",
        "      <td>1.11</td>\n",
        "      <td>4.330</td>\n",
-       "      <td>0.004806</td>\n",
+       "      <td>0.004999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -253,7 +253,7 @@
        "      <td>2.03</td>\n",
        "      <td>1.84</td>\n",
        "      <td>2.040</td>\n",
-       "      <td>0.007304</td>\n",
+       "      <td>0.007346</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -261,19 +261,19 @@
       ],
       "text/plain": [
        "       Eksperyment    t1    t2     M    Tsr      Ired\n",
-       "0  Bez Tarczy m1 1  3.12  3.09  1.11  3.105  0.002471\n",
-       "1  Bez Tarczy m1 2  1.55  1.55  1.84  1.550  0.004216\n",
-       "2    Tarcza A m1 1  4.31  4.35  1.11  4.330  0.004806\n",
-       "3    Tarcza A m1 2  2.05  2.03  1.84  2.040  0.007304"
+       "0  Bez Tarczy m1 1  3.12  3.09  1.11  3.105  0.002570\n",
+       "1  Bez Tarczy m1 2  1.55  1.55  1.84  1.550  0.004241\n",
+       "2    Tarcza A m1 1  4.31  4.35  1.11  4.330  0.004999\n",
+       "3    Tarcza A m1 2  2.05  2.03  1.84  2.040  0.007346"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Ired\"] = [((0.002053*M)-0.0017042-(0.013954*Mt))*(t**2) for t,M in zip(df[\"Tsr\"], df[\"M\"])]\n",
+    "df[\"Ired\"] = [round(((0.002053*M)-0.0017042-(0.013954*Mt))*(t**2),6) for t,M in zip(df[\"Tsr\"], df[\"M\"])]\n",
     "df.head(10)"
    ]
   },
@@ -286,15 +286,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ia1 = 0.002335 kg*m^2\n",
-      "Ia2 = 0.003087 kg*m^2\n"
+      "Ia1 = 0.002429 kg*m^2\n",
+      "Ia2 = 0.003105 kg*m^2\n"
      ]
     }
    ],
@@ -315,24 +315,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I = 0.052997 kg*m^2\n"
+      "Teoretyczne I = 0.003455 kg*m^2\n"
      ]
     }
    ],
    "source": [
-    "# Zakladajac, ze tarcza A to wydrazony walec I = 0.5*pi*d(r2^4-r1^4)*h, gdzie r2>r1\n",
-    "# Wynik wychodzi bardzo duzy\n",
-    "# Ten krazek ma w sobie dziury wiec tez trzeba by wziac to pod uwage\n",
     "from math import pi\n",
-    "I = 0.5*pi*7028*(0.15**4-0.031**4)*0.0095\n",
-    "print(f\"I = {round(I, 6)} kg*m^2\")"
+    "P = pi*(0.0045**2)\n",
+    "V = P*0.0095\n",
+    "M = 7028*V\n",
+    "I = 0.5*1.175*((0.075**2)+(0.016**2))#-2*((0.5*M*0.0045**2)+(P*(0.071**2)))\n",
+    "# Moment bezwladnosci wydrazonego walca = 0.5*m*(r1^2+r2^2), gdzie r1>r2\n",
+    "# Twierdzenie Steinera - I + Pd^2 - ale chyba nie ma co tego uwzgledniac bo to jest prawie 0\n",
+    "print(f\"Teoretyczne I = {round(I, 6)} kg*m^2\")"
    ]
   },
   {
@@ -344,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +372,7 @@
        "0.004555495559762034"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
