--- a/kratownica/obliczenia.ipynb
+++ b/kratownica/obliczenia.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,18 @@
     "\n",
     "$\\sum \\limits _{i=1} ^{n} P_{iy} : R_bcos(45^\\circ) + R_ay - P_1 - P_2 = 0 $\n",
     "\n",
-    "$\\sum \\limits _{i=1} ^{n} M_A : R_bcos(45^\\circ)3a - P_13a - P_22a = 0 $"
+    "$\\sum \\limits _{i=1} ^{n} M_A : R_bcos(45^\\circ)3a - P_13a - P_22a = 0 $\n",
+    "\n",
+    "$ R_b = \\frac{P_13a + P_22a} {cos(45^\\circ)3a} $\n",
+    "\n",
+    "$ R_{ax} = R_bcos(45^\\circ) $\n",
+    "\n",
+    "$ R_{ay} = -R_bcos(45^\\circ) + P_1 + P_2 $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,15 +44,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "P1 = 1\n",
-    "P2 = 2\n",
-    "a = 10\n",
-    "cos\n"
+    "nie mam pojecia ile wynosi a, bo nie ma tego na zdjeciach ????!!, ale 0.4m wydaje sie produkowac te same wartosci teoretyczne co na zdjeciach, zatem pewnie a = 0.4m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rb = 739.9165358336035\n",
+      "Rax = 523.2000000000002\n",
+      "Ray = 114.44999999999987\n"
+     ]
+    }
+   ],
+   "source": [
+    "P1 = 294.3 # [N]\n",
+    "P2 = 343.35 # [N]\n",
+    "a = 0.4 # [m]\n",
+    "get_Rb = lambda p1, p2, l: (p1*3*l+p2*2*l)/(math.cos(math.radians(45))*3*l)\n",
+    "Rb = get_Rb(P1, P2, a)\n",
+    "\n",
+    "get_Rax = lambda rb: Rb*math.cos(math.radians(45))\n",
+    "Rax = get_Rax(Rb)\n",
+    "\n",
+    "get_Ray = lambda rb, p1, p2: -rb*math.cos(math.radians(45)) + p1 + p2\n",
+    "Ray = get_Ray(Rb, P1, P2)\n",
+    "\n",
+    "print(f\"Rb = {Rb}\\nRax = {Rax}\\nRay = {Ray}\")\n"
    ]
   },
   {
