--- a/kratownica/obliczenia.ipynb
+++ b/kratownica/obliczenia.ipynb
@@ -52,7 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_Rb = lambda p1, p2, l: (p1*3*l+p2*2*l)/(math.cos(math.radians(45))*3*l)\n",
+    "get_Rax = lambda rb: Rb*math.cos(math.radians(45))\n",
+    "get_Ray = lambda rb, p1, p2: -rb*math.cos(math.radians(45)) + p1 + p2\n",
+    "get_relative_error = lambda x, y: abs(x-y)/y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -69,13 +81,11 @@
     "P1 = 294.3 # [N]\n",
     "P2 = 343.35 # [N]\n",
     "a = 0.4 # [m]\n",
-    "get_Rb = lambda p1, p2, l: (p1*3*l+p2*2*l)/(math.cos(math.radians(45))*3*l)\n",
+    "\n",
     "Rb = get_Rb(P1, P2, a)\n",
     "\n",
-    "get_Rax = lambda rb: Rb*math.cos(math.radians(45))\n",
     "Rax = get_Rax(Rb)\n",
     "\n",
-    "get_Ray = lambda rb, p1, p2: -rb*math.cos(math.radians(45)) + p1 + p2\n",
     "Ray = get_Ray(Rb, P1, P2)\n",
     "\n",
     "print(f\"Rb = {Rb}\\nRax = {Rax}\\nRay = {Ray}\")\n"
